<resources>
    <string name="app_name">TomKitsApp</string>
    <string name="title_scan_disease">Scan Disease</string>
    <string name="title_scan_quality">Scan Quality</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hiasan_profile">Hiasan Profile</string>
    <string name="placeholder_profile">Placeholder Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="diagnose_disease">Diagnose Disease</string>
    <string name="diagnose_quality">Diagnose Quality</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="history">History</string>
    <string name="jenis_penyakit">Disease Name</string>
    <string name="tanggal_scan">Date Scan</string>
    <string name="gambar_scan">Image Scan</string>
    <string name="quality_tomato">Quality:</string>
    <string name="deskripsi">Description</string>
    <string name="detail_deskripsi">Ini adalah contoh dari deskripsi penyakit yang ada ya ges ya</string>
    <string name="detail_disease">Ini adalah contoh penyakit</string>
    <string name="solusi">Solution</string>
    <string name="detail_solusi">Ini adalah contoh solusi dari penyakit yang dideteksi</string>
    <string name="rekomendasi_produk">Product Recomendation:</string>
    <string name="nama_produk">Product Name</string>
    <string name="hey">Hey,</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="or_register_here">Or register here</string>
    <string name="create_password">Create password</string>
    <string name="or_login_here">Or Login here</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="come_join_us">Come Join Us.</string>
    <string name="hola">Hola!</string>
    <string name="strip">-</string>
    <string name="confidence_score">90% contoh</string>
    <string name="example_quality">Ripe</string>
    <string name="example_quality_confidence">99.384934</string>
    <string name="type_tomato">Type:</string>
    <string name="no_session">No session available. Please log in.</string>
    <string name="logout">Logout</string>
    <string name="product_ingredient">Product Ingredient</string>
    <string name="welcome_tomato_lovers">Welcome Tomato Lovers!</string>
    <string name="your_smart_assistant_for_perfect_tomatoes_diagnose_diseases_check_quality_and_ensure_the_best_harvest_every_time">Your smart assistant for perfect tomatoes! Diagnose diseases, check quality and ensure the best harvest every time.</string>
    <string name="let_s_go">LET\'S GO!</string>
    <string name="image_warning">Please upload an image!</string>
</resources>