<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_scan_disease"
        android:name="com.neohamzah.tomkitsapp.ui.scanDisease.ScanDiseaseFragment"
        android:label="@string/title_scan_disease"
        tools:layout="@layout/fragment_scan_disease" />

    <fragment
        android:id="@+id/navigation_scan_quality"
        android:name="com.neohamzah.tomkitsapp.ui.scanQuality.ScanQualityFragment"
        android:label="@string/title_scan_quality"
        tools:layout="@layout/fragment_scan_quality" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.neohamzah.tomkitsapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.neohamzah.tomkitsapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>