<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.scanQuality.ScanQualityFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_quality"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/gambar_scan"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/group_btn_quality"
        app:srcCompat="@drawable/ic_place_holder" />

    <LinearLayout
        android:id="@+id/group_btn_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_galery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity=""
                android:paddingVertical="16dp"
                android:paddingHorizontal="32dp"
                android:text="@string/gallery"
                android:backgroundTint="@color/accentRed"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_gallery"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/accentRed"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/camera"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_camera"
                app:iconGravity="textStart" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_diagnose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:padding="16dp"
            android:text="@string/diagnose_quality"
            android:backgroundTint="@color/accentRed"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_scan_quality_white"
            app:iconGravity="textStart"
            app:iconPadding="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quality_tomato"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>