<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.scanDisease.ScanDiseaseFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_disease"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_galery"
        app:srcCompat="@drawable/ic_place_holder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_galery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        android:text="@string/gallery"
        android:backgroundTint="@color/ourRed"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_gallery"
        app:iconGravity="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_camera"
        app:layout_constraintBottom_toTopOf="@id/btn_diagnose" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="32dp"
        android:text="@string/camera"
        android:backgroundTint="@color/ourRed"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_camera"
        app:iconGravity="textStart"
        app:layout_constraintStart_toEndOf="@id/btn_galery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_diagnose" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_diagnose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/diagnose_disease"
        android:backgroundTint="@color/ourRed"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_scan_disease_white"
        app:iconGravity="textStart"
        app:iconPadding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>