<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_disease"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_place_holder" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_disease_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_penyakit"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_disease"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:id="@+id/tv_disease"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_disease_title"
                    app:layout_constraintStart_toStartOf="@id/tv_disease_title"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_detail_disease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_disease"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_marginEnd="4dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_strip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strip"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_confidence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confidence_score"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_marginStart="4dp" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_disease"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/divider_1"
                    app:layout_constraintStart_toStartOf="@id/tv_disease_title"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_detail_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_deskripsi"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    app:layout_constraintStart_toStartOf="@id/tv_description"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_solution"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/solusi"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/divider_2"
                    app:layout_constraintStart_toStartOf="@id/tv_description"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_detail_solution"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_solusi"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_solution"
                    app:layout_constraintStart_toStartOf="@id/tv_solution"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_solution"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_animation"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/divider_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:lottie_rawRes="@raw/animation_history"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recommendation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rekomendasi_produk"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/cv_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_recommendation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
